--- a/style/style.scss
+++ b/style/style.scss
@@ -181,3 +181,59 @@ body {
         }
     }
 }
+
+
+@media screen and (max-width:698px){
+    .container {
+        align-items: center;
+        background-image: none;
+        .picture {
+            width: 100%;
+            height: 30%;
+            background-image: url(hero-mobile.jpg);
+            position: absolute;
+            top: 10%;
+            display: block;
+        }
+        .left-side-container {
+            width: 100%;
+            height:100%;
+            align-items: flex-end;
+            padding-right: 0;
+            text-align: center;
+            margin-bottom: 12%;
+            .title {
+                top:3%;
+            }     
+            .newsletter {
+                height: 50%;
+                h2 {
+                    font-size:3rem;
+                }
+
+                p {
+                    font-size: 1rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .container {
+        .picture {
+            background-image: none;
+        }
+        .left-side-container {
+            .title {
+                top: 10%;
+                left: 20%;
+            }
+            .newsletter {
+                h2 {
+                    font-size: 1.5rem;
+                }
+            }
+        }
+    }
+}
